--- a/src/main/webapp/css/landing-page.css
+++ b/src/main/webapp/css/landing-page.css
@@ -51,6 +51,26 @@ header.masthead h1 {
   }
 }
 
+
+.uploadButton {
+    display: block;
+    width: 100px;
+    background: #3df;
+    padding: 10px;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Tahoma;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.uploadButton:hover {
+    background: #3ce;
+}
+
+
+
 .showcase .showcase-text {
   padding: 3rem;
 }
